This commit adds styling for the form that will take users' datails

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,13 @@
 .checked {
     color: orange;
   }
+  input[type=text], select{
+    width: 80%;
+    padding: 12px 20px;
+    margin: 8px 20px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
   
