--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,11 @@ header,
   .top-nav-collapse {
     background-color: #24355c;
   }
-  .top-nav-collapse {
-    background-color: #24355c;
-  }
+  
   #basicExampleNav a{
   float: left;
   padding:30px;
-  color:white;
+  color:black;
   text-decoration: none;
   font-size: 50px;
   
@@ -32,3 +30,6 @@ header,
   body{
     font-family: 'Pacifico'
   }  
+  .navbar-color{
+      background-color:darkblue;
+  }
