--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
-
-.checked {
+body{
+overflow-x: hidden;
+  }
+  .checked {
   color: orange;
 }
 
@@ -51,9 +53,9 @@ input[type=submit] {
 #img6{
   cursor: pointer;
 }
-html,
+/* html,
 body,
-header,
+header, */
 #intro {
   height: 100%;
 }
@@ -67,15 +69,13 @@ header,
   .top-nav-collapse {
     background-color: #24355c;
   }
-  
+
   #basicExampleNav a{
   float: left;
   padding:30px;
   color:black;
   text-decoration: none;
   font-size: 50px;
-  
-  
   text-align: center;
   }
   #Hdescription{
@@ -84,21 +84,21 @@ header,
   body{
     font-family: 'Amiko';
     font-size: 25px;
-  }  
+  }
   .navbar-color{
       background-color:darkblue;
   }
   .profile{
-    border-style: inset;
+    border-radius: 100%;
   }
   .card-title{
     font-family: 'Merienda', cursive
   }
   .card-text{
     font-family: 'Aclonica', sans-serif;
-  
+
   }
-  
+
 
   html,
   body,
@@ -116,14 +116,14 @@ header,
     .top-nav-collapse {
       background-color: #24355c;
     }
-    
+
     #basicExampleNav a{
     float: left;
     padding:30px;
     color:black;
     text-decoration: none;
     font-size: 50px;
-    
+
     text-align: center;
     }
     #Hdescription{
@@ -131,11 +131,11 @@ header,
     }
     body{
       font-family: 'Marienda'!important
-    }  
+    }
     .navbar-color{
         background-color:darkblue;
     }
-  
+
   h2{
       font-family: 'Calligraffitti';
       font-weight: bolder;
@@ -223,4 +223,3 @@ header,
     display: none;
     background-color: #006400;
    }
-
